...
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pair"
                android:textAllCaps="true"
                android:textSize="50sp"
                android:id="@+id/pair_activity_title"
                android:transitionName="pair_transition_text"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <ScrollView
...
