...
    </RelativeLayout>


    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/fly_activity_setting_button"
        android:contentDescription="@string/fly_activity_setting_description"
        android:src="@drawable/ic_settings_white_24dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@android:color/transparent"/>

...
