...
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textAllCaps="true"
            android:textSize="40sp"
            android:id="@+id/setting_activity_title"
            android:transitionName="setting_transition_text"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <ScrollView
...
